unpackaged/main/default/objects/CMPL123__X123_Report_Template__c/CMPL123__X123_Report_Template__c.object-meta.xml
<CustomObject>
    <description>Report Templates</description>
    <label>Report Template</label>
    <nameField>
        <label>Template Name</label>
        <type>Text</type>
    </nameField>
    <pluralLabel>Report Templates</pluralLabel>
    <sharingModel>ReadWrite</sharingModel>
</CustomObject>