unpackaged/main/default/objects/CMPL123__X123_Report_Template__c/fields/CMPL123__Description__c.field-meta.xml
<CustomField>
        <fullName>CMPL123__Description__c</fullName>
        <description>Description</description>
        <inlineHelpText>Description</inlineHelpText>
        <label>Description</label>
        <type>TextArea</type>
    </CustomField>