unpackaged/main/default/objects/CMPL123__X123_Report_Template__c/fields/CMPL123__Footer__c.field-meta.xml
<CustomField>
        <fullName>CMPL123__Footer__c</fullName>
        <description>Footer</description>
        <inlineHelpText>Footer</inlineHelpText>
        <label>Footer</label>
        <length>1000</length>
        <type>LongTextArea</type>
    </CustomField>