unpackaged/main/default/objects/CMPL123__X123_Report_Template__c/fields/CMPL123__IsActive__c.field-meta.xml
<CustomField>
        <fullName>CMPL123__IsActive__c</fullName>
        <defaultValue>false</defaultValue>
        <description>Is Active</description>
        <label>Is Active</label>
        <type>Checkbox</type>
    </CustomField>