unpackaged/main/default/objects/CMPL123__X123_Report_Template__c/fields/CMPL123__Logo_Details__c.field-meta.xml
<CustomField>
        <fullName>CMPL123__Logo_Details__c</fullName>
        <description>Logo Details</description>
        <label>Logo Details</label>
        <length>250</length>
        <type>Text</type>
    </CustomField>