unpackaged/main/default/objects/CMPL123__X123_Report_Template__c/fields/CMPL123__Report_Template_External_Id__c.field-meta.xml
<CustomField>
        <fullName>CMPL123__Report_Template_External_Id__c</fullName>
        <externalId>true</externalId>
        <label>Report Template External Id</label>
        <length>30</length>
        <type>Text</type>
    </CustomField>