unpackaged/main/default/objects/CMPL123__X123_Report_Template__c/fields/CMPL123__Title__c.field-meta.xml
<CustomField>
        <fullName>CMPL123__Title__c</fullName>
        <description>Title</description>
        <inlineHelpText>Title</inlineHelpText>
        <label>Title</label>
        <length>250</length>
        <type>Text</type>
    </CustomField>